articles markup to html template done && article content text-overflow fixed

--- a/src/scss/blocks/article.scss
+++ b/src/scss/blocks/article.scss
@@ -57,6 +57,8 @@
 
   &__content {
     margin-bottom: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     @media ($tablet) {
       margin-bottom: 12px;
